--- a/templates/index.html
+++ b/templates/index.html
@@ -227,7 +227,7 @@
   <div class="logo">Deep Analysis</div>
   <div class="nav-links">
     <a href="#about">About</a>
-    <a href="http://127.0.0.1:8000/docs" target="_blank">Docs</a>
+    <a href="/docs" target="_blank">Docs</a>
     <a href="#contact">Contact</a>
   </div>
 </nav>
