--- a/templates/index.html
+++ b/templates/index.html
@@ -256,7 +256,7 @@
   <div class="card">
     <h2>Request API Access</h2>
     <p>If you would like to automate uploads or integrate with your systems, you can request API access. Please email us at <a href="mailto:ab0358031@gmail.com" style="color: var(--primary); text-decoration: none; font-weight: 500;">ab0358031@gmail.com</a> with a brief description of your intended use case.</p>
-    <p>As of now, the system is in development phase, so server constraints are there, so please try again in 5 minutes if you get any error.This Service needs to deployed as a proper queue based service so it can handle more requests.Work is in progress.</p>
+    <p>Currently, the deployed application is intended for demonstration purposes and may encounter resource limitations. If you wish to implement this solution within your organization, you can access the code with an enhanced queue service at the following link: <a href="https://github.com/aditya699/deep-analysis/tree/dev_aditya" target="_blank" style="color: var(--primary); text-decoration: none; font-weight: 500;">GitHub Repository</a>.</p>
   </div>
 </section>
 
